--- a/TODO
+++ b/TODO
@@ -1,5 +1,7 @@
 
+== hgen ==
 [ ] show number of .h files to be generated and ask confirmation
 [ ] ask user before deleting existing .h files
 
-[ ] auto-generated test_suite from header file and flags on protoypes
+== prostarter ==
+[ ] make non relative path to find structures
